--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Dev Blog</title>
+    <title>Display JSON File</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,6 +27,7 @@
 
         <section id="blog">
             <h2>Latest Posts</h2>
+            <pre id="json-content"></pre>
             <!-- Blog posts go here -->
         </section>
 
@@ -45,5 +46,21 @@
         <p>&copy; 2023 Your Dev Blog</p>
     </footer>
 
+    <script>
+        async function displayJSON() {
+            try {
+                const response = await fetch('/data/commit_data.json');
+                const data = await response.json();
+                const jsonContent = JSON.stringify(data, null, 2); // Pretty-print JSON
+                document.getElementById('json-content').innerText = jsonContent;
+            } catch (error) {
+                console.error('Error fetching JSON:', error);
+                document.getElementById('json-content').innerText = 'Error fetching JSON.';
+            }
+        }
+
+        // Load the latest JSON file content on page load
+        displayJSON();
+    </script>
 </body>
 </html>
